# async-payment-processor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 202605261430_create_payments_and_outbox.py  202605271100_add_delivery_recovery_leases.py
src/app/: main.py
src/app/api/: dependencies.py  payments.py
src/app/application/: gateway.py  interfaces.py  outbox.py  outbox_records.py  payments.py  processing.py  recovery.py  webhooks.py
src/app/core/: config.py  errors.py  heartbeat.py  logging.py  security.py
src/app/db/: models.py  session.py
src/app/domain/: __init__.py  enums.py
src/app/messaging/: __init__.py  consumer.py  contracts.py  outbox_relay.py  publisher.py  topology.py
src/app/schemas/: payments.py
src/app/tools/: __init__.py  healthcheck.py  verify_rabbit_topology.py  webhook_mock.py
tests/: conftest.py
tests/e2e/: conftest.py  test_payment_flow.py
tests/integration/: test_payments_api.py
tests/unit/: test_outbox.py  test_processing.py  test_recovery.py  test_webhooks.py
