[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "async-payment-processor"
version = "0.1.0"
description = "Asynchronous payment processing service with outbox-based delivery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "faststream[rabbit]>=0.6.2,<0.7.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.36,<2.1.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0,<1.0.0",
  "mypy>=1.16.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "pytest-cov>=6.1.0,<7.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "e2e: tests that require live infrastructure such as Docker Compose services",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["B008"]
select = ["ASYNC", "B", "C4", "E", "F", "I", "ISC", "N", "RUF", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = ["src", "tests"]
mypy_path = "src"
no_implicit_optional = true
python_version = "3.12"
strict_equality = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["alembic.*", "faststream.*"]
ignore_missing_imports = true
